fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 html, body {
+    max-width: 100%;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -178,7 +180,7 @@ mark {
     border: 2px solid transparent;
     box-shadow: 0 0 5px #d7d7d7;
     background-color: #fff;
-    max-width: 630px; 
+    max-width: 610px; 
     margin: 0 auto;
 }
 
